deploy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: noctis-dashboard
  namespace: noctis
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`noctis.zyrak.cloud`)
      kind: Rule
      services:
        - name: noctis-metrics
          port: 3000
  tls:
    certResolver: letsencrypt
